--- a/about.html
+++ b/about.html
@@ -14,7 +14,9 @@
     <div class="navbar">
       <!-- Logo -->
       <div class="logo">
+        <a href="index.html">
         <img src="images/1.png" alt="Hospicare Logo">
+       </a> 
       </div>
 
       <!-- Hamburger -->
@@ -233,3 +235,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
