--- a/clinicalfurniture.html
+++ b/clinicalfurniture.html
@@ -14,7 +14,9 @@
     <div class="navbar">
       <!-- Logo -->
       <div class="logo">
+       <a href="index.html">
         <img src="images/1.png" alt="Hospicare Logo">
+       </a> 
       </div>
 
       <!-- Hamburger -->
@@ -197,3 +199,4 @@ Model 335-XR-01 - Single Film Model 335-XR-02 - Double Film Model 335-XR-03 - Tr
   <script src="script.js"></script>
 </body>
 </html>
+
