--- a/electromedicalequipment.html
+++ b/electromedicalequipment.html
@@ -14,7 +14,9 @@
     <div class="navbar">
       <!-- Logo -->
       <div class="logo">
+        <a href="index.html">
         <img src="images/1.png" alt="Hospicare Logo">
+       </a> 
       </div>
 
       <!-- Hamburger -->
@@ -149,3 +151,4 @@ New LED technology, low power consumptionColors temperature adjustmentBattery ba
   <script src="script.js"></script>
 </body>
 </html>
+
