--- a/emergencycrashtrolleys.html
+++ b/emergencycrashtrolleys.html
@@ -14,7 +14,9 @@
     <div class="navbar">
       <!-- Logo -->
       <div class="logo">
+        <a href="index.html">
         <img src="images/1.png" alt="Hospicare Logo">
+       </a> 
       </div>
 
       <!-- Hamburger -->
@@ -159,3 +161,4 @@ Strongman has introduced the new model of emergency crash carts which features s
   <script src="script.js"></script>
 </body>
 </html>
+
