--- a/generalpurposetrolleys.html
+++ b/generalpurposetrolleys.html
@@ -14,7 +14,9 @@
     <div class="navbar">
       <!-- Logo -->
       <div class="logo">
+        <a href="index.html">
         <img src="images/1.png" alt="Hospicare Logo">
+       </a> 
       </div>
 
       <!-- Hamburger -->
@@ -282,3 +284,4 @@ Platform constructed from heavy duty stainless steel sheet Wire side guard on pl
   <script src="script.js"></script>
 </body>
 </html>
+
