--- a/generalwardfurniture.html
+++ b/generalwardfurniture.html
@@ -14,7 +14,9 @@
     <div class="navbar">
       <!-- Logo -->
       <div class="logo">
+        <a href="index.html">
         <img src="images/1.png" alt="Hospicare Logo">
+       </a> 
       </div>
 
       <!-- Hamburger -->
@@ -337,3 +339,4 @@ Four Stainless steel hooks      </p>
   <script src="script.js"></script>
 </body>
 </html>
+
