--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="navbar">
       <!-- Logo -->
       <div class="logo">
+        <a href="index.html">
         <img src="images/1.png" alt="Hospicare Logo">
+       </a> 
       </div>
 
       <!-- Hamburger -->
@@ -226,3 +228,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
