--- a/obstetricfurniture.html
+++ b/obstetricfurniture.html
@@ -14,7 +14,9 @@
     <div class="navbar">
       <!-- Logo -->
       <div class="logo">
+        <a href="index.html">
         <img src="images/1.png" alt="Hospicare Logo">
+       </a> 
       </div>
 
       <!-- Hamburger -->
@@ -159,3 +161,4 @@ MODEL HCS_261-G Model HCS_261-G is a light duty version of our 260-G couch. It h
   <script src="script.js"></script>
 </body>
 </html>
+
