--- a/operationtheaterfurniture.html
+++ b/operationtheaterfurniture.html
@@ -14,7 +14,9 @@
     <div class="navbar">
       <!-- Logo -->
       <div class="logo">
+        <a href="index.html">
         <img src="images/1.png" alt="Hospicare Logo">
+       </a> 
       </div>
 
       <!-- Hamburger -->
@@ -278,3 +280,4 @@ Constructed of tubular stainless steel pipe Provided with 3 shelves and 10 hangi
   <script src="script.js"></script>
 </body>
 </html>
+
