--- a/patienttransportation.html
+++ b/patienttransportation.html
@@ -14,7 +14,9 @@
     <div class="navbar">
       <!-- Logo -->
       <div class="logo">
+        <a href="index.html">
         <img src="images/1.png" alt="Hospicare Logo">
+       </a> 
       </div>
 
       <!-- Hamburger -->
@@ -177,3 +179,4 @@ Mild Steel construction High quality poshish seat and arm rests Utility basket u
   <script src="script.js"></script>
 </body>
 </html>
+
