--- a/storagecabinets.html
+++ b/storagecabinets.html
@@ -14,7 +14,9 @@
     <div class="navbar">
       <!-- Logo -->
       <div class="logo">
+        <a href="index.html">
         <img src="images/1.png" alt="Hospicare Logo">
+       </a> 
       </div>
 
       <!-- Hamburger -->
@@ -161,3 +163,4 @@ Model HCS_630-CC</h3>
   <script src="script.js"></script>
 </body>
 </html>
+
