--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Hospicare Solutions</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="/1.png">
 
 </head>
 <body>
@@ -228,4 +229,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
