--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Hospicare Solutions</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="icon" type="image/png" href="/1.png">
+  <link rel="icon" type="image/png" href="images/1.png">
 
 </head>
 <body>
@@ -229,5 +229,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
