--- a/about.html
+++ b/about.html
@@ -217,13 +217,13 @@
       </div>
 
       <!-- Map -->
-      <div class="footer-map">
+   <div class="footer-map">
         <h3>Find Us</h3>
         <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.590062195643!2d73.08287708800934!3d31.397865086854903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39226761ba79dc07%3A0xa82ae639138495f7!2shospicare%20solution!5e0!3m2!1sen!2s!4v1755861388973!5m2!1sen!2s" 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32398.87773128412!2d73.0657512174234!3d31.400002494506623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39226761ba79dc07%3A0xa82ae639138495f7!2shospicare%20solution!5e0!3m2!1sen!2s!4v1756288660804!5m2!1sen!2s" 
           width="100%" height="180" style="border:0;" allowfullscreen="" loading="lazy">
         </iframe>
-       <a href="https://maps.app.goo.gl/uAPBRiDNpLc3JF7W8" target="_blank" class="directions-btn">
+        <a href="https://www.google.com/maps/dir/?api=1&destination=31.398122186184313, 73.08783970999643" target="_blank" class="directions-btn">
   Get Directions
 </a>
 
@@ -238,6 +238,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
