--- a/clinicalfurniture.html
+++ b/clinicalfurniture.html
@@ -6,6 +6,7 @@
   <title>About Us - Hospicare Solutions</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="images/1.png">
 </head>
 <body>
 
@@ -202,5 +203,6 @@ Model 335-XR-01 - Single Film Model 335-XR-02 - Double Film Model 335-XR-03 - Tr
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
