--- a/emergencycrashtrolleys.html
+++ b/emergencycrashtrolleys.html
@@ -6,6 +6,7 @@
   <title>About Us - Hospicare Solutions</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="images/1.png">
 </head>
 <body>
 
@@ -164,5 +165,6 @@ Strongman has introduced the new model of emergency crash carts which features s
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
