--- a/generalpurposetrolleys.html
+++ b/generalpurposetrolleys.html
@@ -6,6 +6,7 @@
   <title>About Us - Hospicare Solutions</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="images/1.png">
 </head>
 <body>
 
@@ -287,5 +288,6 @@ Platform constructed from heavy duty stainless steel sheet Wire side guard on pl
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
