--- a/obstetricfurniture.html
+++ b/obstetricfurniture.html
@@ -6,6 +6,7 @@
   <title>About Us - Hospicare Solutions</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="images/1.png">
 </head>
 <body>
 
@@ -164,5 +165,6 @@ MODEL HCS_261-G Model HCS_261-G is a light duty version of our 260-G couch. It h
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
