--- a/operationtheaterfurniture.html
+++ b/operationtheaterfurniture.html
@@ -6,6 +6,7 @@
   <title>About Us - Hospicare Solutions</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="images/1.png">
 </head>
 <body>
 
@@ -283,5 +284,6 @@ Constructed of tubular stainless steel pipe Provided with 3 shelves and 10 hangi
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
