--- a/paediatricfurniture.html
+++ b/paediatricfurniture.html
@@ -6,6 +6,7 @@
   <title>About Us - Hospicare Solutions</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="images/1.png">
 </head>
 <body>
 
@@ -183,5 +184,6 @@ Mild Steel construction High quality poshish seat and arm rests Utility basket u
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
