--- a/storagecabinets.html
+++ b/storagecabinets.html
@@ -6,6 +6,7 @@
   <title>About Us - Hospicare Solutions</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="images/1.png">
 </head>
 <body>
 
@@ -166,5 +167,6 @@ Model HCS_630-CC</h3>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
