--- a/storagecabinets.html
+++ b/storagecabinets.html
@@ -37,7 +37,7 @@
   <!-- Hero Banner -->
   <section class="hero about-hero">
     <div class="hero-content">
-      <h1>About Hospicare Solutions</h1>
+      <h1>Products</h1>
       <p>Dedicated to Healthcare Excellence</p>
     </div>
   </section>
@@ -167,6 +167,7 @@ Model HCS_630-CC</h3>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
