--- a/operationtheaterfurniture.html
+++ b/operationtheaterfurniture.html
@@ -37,10 +37,11 @@
   <!-- Hero Banner -->
   <section class="hero about-hero">
     <div class="hero-content">
-      <h1>About Hospicare Solutions</h1>
+      <h1>Products</h1>
       <p>Dedicated to Healthcare Excellence</p>
     </div>
   </section>
+
 
 
 
@@ -284,6 +285,7 @@ Constructed of tubular stainless steel pipe Provided with 3 shelves and 10 hangi
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
