--- a/obstetricfurniture.html
+++ b/obstetricfurniture.html
@@ -35,12 +35,13 @@
   </header>
 
   <!-- Hero Banner -->
-  <section class="hero about-hero">
+    <section class="hero about-hero">
     <div class="hero-content">
-      <h1>About Hospicare Solutions</h1>
+      <h1>Products</h1>
       <p>Dedicated to Healthcare Excellence</p>
     </div>
   </section>
+
 
 
 
@@ -165,6 +166,7 @@ MODEL HCS_261-G Model HCS_261-G is a light duty version of our 260-G couch. It h
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
