--- a/generalwardfurniture.html
+++ b/generalwardfurniture.html
@@ -35,12 +35,13 @@
   </header>
 
   <!-- Hero Banner -->
-  <section class="hero about-hero">
+   <section class="hero about-hero">
     <div class="hero-content">
-      <h1>About Hospicare Solutions</h1>
+      <h1>Products</h1>
       <p>Dedicated to Healthcare Excellence</p>
     </div>
   </section>
+
 
 
 
@@ -343,6 +344,7 @@ Four Stainless steel hooks      </p>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
