--- a/generalpurposetrolleys.html
+++ b/generalpurposetrolleys.html
@@ -37,10 +37,11 @@
   <!-- Hero Banner -->
   <section class="hero about-hero">
     <div class="hero-content">
-      <h1>About Hospicare Solutions</h1>
+      <h1>Products</h1>
       <p>Dedicated to Healthcare Excellence</p>
     </div>
   </section>
+
 
 
 
@@ -288,6 +289,7 @@ Platform constructed from heavy duty stainless steel sheet Wire side guard on pl
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
