--- a/electromedicalequipment.html
+++ b/electromedicalequipment.html
@@ -37,10 +37,11 @@
   <!-- Hero Banner -->
   <section class="hero about-hero">
     <div class="hero-content">
-      <h1>About Hospicare Solutions</h1>
+      <h1>Products</h1>
       <p>Dedicated to Healthcare Excellence</p>
     </div>
   </section>
+
 
 
 
@@ -155,6 +156,7 @@ New LED technology, low power consumptionColors temperature adjustmentBattery ba
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
