--- a/clinicalfurniture.html
+++ b/clinicalfurniture.html
@@ -35,12 +35,13 @@
   </header>
 
   <!-- Hero Banner -->
-  <section class="hero about-hero">
+    <section class="hero about-hero">
     <div class="hero-content">
-      <h1>About Hospicare Solutions</h1>
+      <h1>Products</h1>
       <p>Dedicated to Healthcare Excellence</p>
     </div>
   </section>
+
 
 
 
@@ -203,6 +204,7 @@ Model 335-XR-01 - Single Film Model 335-XR-02 - Double Film Model 335-XR-03 - Tr
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
