--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h2>Explore Our Categories</h2>
   <div class="category-container">
 
-<a href="GeneralWardFurniture.html"><div class="category-card" data-category="GWF">
+<a href="generalWardFurniture.html"><div class="category-card" data-category="GWF">
       <img src="images/GWF.jpg" alt="GWF">
       <h3>General Ward Furniture</h3>
     </div></a>
@@ -232,6 +232,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
